--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +22,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <my-app>Loading AppComponent content here ...</my-app> 
   </body>
 </html>
